@@ -4,9 +4,9 @@ sub hook_data_post {
 
   # klez files are always sorta big .. how big?  Dunno. 
   return (DECLINED)
-    if $transaction->body_size < 60_000;
+    if $transaction->data_size < 60_000;
    #   220k was too little, so let's just disable the "big size check"
-   #   or $transaction->body_size > 1_000_000;
+   #   or $transaction->data_size > 1_000_000;
 
   # maybe it would be worthwhile to add a check for
   # Content-Type: multipart/alternative; here?
